# cmake-learning

./: CMakeLists.txt  main.cpp
foo/: CMakeLists.txt
foo/src/: foo.cpp
include/: foo.h
